# TCValidationC-

./: CMakeLists.txt  Credit.cpp  Credit.h  Lab4C++.cpp  Lab4C++.sln  Lab4C++.vcxproj  Lab4C++.vcxproj.filters  README.md  cards.txt  tc_validator  tc_validator_tests  validation_results.txt
.github/: copilot-instructions.md
include/: CreditCard.h
src/: CreditCard.cpp  main.cpp
tests/: test_creditcard.cpp
